Oppdatert til siste kode fra felles (fpsak). Fiks for oidc race condition problem